[gd_scene load_steps=5 format=3 uid="uid://bie2w3h5ibms2"]

[ext_resource type="Script" uid="uid://carsuxc1cgrve" path="res://Main Game Scenes/Start Screen/Title Screen/title_screen.gd" id="1_gq8uw"]
[ext_resource type="PackedScene" uid="uid://baixd5nr123uf" path="res://ui/shared/version_label.tscn" id="2_6y0hd"]
[ext_resource type="Script" uid="uid://cocfcmwelj8nc" path="res://ui/shared/general_menu_button/general_menu_button.gd" id="3_q7wek"]

[sub_resource type="Theme" id="Theme_smuqf"]
default_font_size = 48

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gq8uw")

[node name="HeaderContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 67.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="HeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="GameTitleLable" type="Label" parent="HeaderContainer/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_smuqf")
text = "Game Title"
horizontal_alignment = 1

[node name="VersionLabel" parent="." instance=ExtResource("2_6y0hd")]
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = 3.0
offset_top = 98.0
offset_right = 105.0
offset_bottom = 112.0
grow_vertical = 1

[node name="PressAnyButtonLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -12.5
offset_right = 67.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[pulse freq=1.0]Press Any Button[/pulse]"

[node name="MainContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -53.0
offset_right = 244.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Start Game"
script = ExtResource("3_q7wek")
metadata/_custom_type_script = "uid://cocfcmwelj8nc"

[node name="OptionsButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Options"
script = ExtResource("3_q7wek")
metadata/_custom_type_script = "uid://cocfcmwelj8nc"

[node name="QuitButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Quit"
script = ExtResource("3_q7wek")
metadata/_custom_type_script = "uid://cocfcmwelj8nc"

[connection signal="focus_entered" from="MainContainer/StartButton" to="MainContainer/StartButton" method="_on_focus_entered"]
[connection signal="pressed" from="MainContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainContainer/StartButton" to="MainContainer/StartButton" method="_on_pressed"]
[connection signal="focus_entered" from="MainContainer/OptionsButton" to="MainContainer/OptionsButton" method="_on_focus_entered"]
[connection signal="pressed" from="MainContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainContainer/OptionsButton" to="MainContainer/OptionsButton" method="_on_pressed"]
[connection signal="focus_entered" from="MainContainer/QuitButton" to="MainContainer/QuitButton" method="_on_focus_entered"]
[connection signal="pressed" from="MainContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MainContainer/QuitButton" to="MainContainer/QuitButton" method="_on_pressed"]
